--- a/Sketchy Pies.sketchplugin/Contents/Sketch/manifest.json
+++ b/Sketchy Pies.sketchplugin/Contents/Sketch/manifest.json
@@ -7,15 +7,23 @@
       "shortcut" : "",
       "name" : "Convert to Pie Chart",
       "identifier" : "convertToPieChart"
+    },
+    {
+      "script" : "script.js",
+      "handler" : "onRun",
+      "shortcut" : "",
+      "name" : "Convert to Pie Chart with Percentage Values",
+      "identifier" : "convertToPieChartWithPercent"
     }
   ],
   "menu" : {
     "items" : [
-      "convertToPieChart"
+      "convertToPieChart",
+      "convertToPieChartWithPercent"
     ],
     "title" : "Sketchy Pies"
   },
-  "identifier" : "com.abynim.sketchplugins.sketchypies",
+  "identifier" : "com.abynim.plugins.sketchypies",
   "version" : "1.1",
   "description" : "Draw pie charts",
   "authorEmail" : "abynimbalkar@gmail.com",
